hphp/test/zend/bad/zend/closure_022.php
<?php
$a = 0;
$foo = function() use ($a) {
};
$foo->a = 1;
?>